--- a/CSS/Site.css
+++ b/CSS/Site.css
@@ -222,3 +222,51 @@ header > nav .feedback-item {
   box-shadow: 0 0 0px #ffa32d;
   background: #f5e3e2;
 }
+
+#enablers-table {
+  padding-bottom: 5rem;
+  margin-bottom: 5rem;
+}
+
+.enablers-data th:first-child {
+  width: 50%;
+}
+
+.enablers-data td {
+  vertical-align: text-top;
+}
+
+.resource-link {
+  padding-right: 4px;
+}
+
+.enabler-resources {
+  text-align: center;
+}
+
+.enabler-info {
+
+}
+.enabler-info-meta {
+}
+.enabler-info-meta-list-card {
+}
+.linked-resource-link{}
+.enabler-info-meta-list li {
+  border: none;
+}
+.list-group {
+  border: none;
+}
+.enabler-info-meta-logo {
+}
+.enabler-info-meta-list-title {
+  text-align: center;
+  font-weight: bold;
+  text-decoration: underline;
+}
+.enabler-abbreviation {
+  font-weight: bold;
+}
+.enabler-url {
+}
