feat: add advanced filter

--- a/CSS/Site.css
+++ b/CSS/Site.css
@@ -330,3 +330,11 @@ tr:hover .row-action span {
   color: #5A5A5A;
   font-weight: 300;
 }
+
+.dt-advance-filter-panel {
+  overflow-y: scroll;
+  height: 17em;
+}
+.publications-description .panel-body {
+  padding: 2px;
+}
